applications/vanilla/design/vanilla.css
/* ... */
3 {
   font-size: 140%;
}
h4 {
   font-size: 120%;
   color: #6C6C6C /* Body Heading Font Color */;
}
h5 {
   font-size: 120%;
   color: #6C6C6C /* Body Heading Font Color */;
}
a,
a:link,
a:visited,
a:active {
   text-decoration: none;
   color: #2786c2 /* Body Link Font Color */;
}
a:hover {
   text-decoration: none;
   color: #ff0084 /* Body Hover Font Color */;
}
input.DateBox,
input.InputBox,
input.SmallInput,
textarea {
   font-family: arial;
   color: #222;
   font-size: 14px;
   padding: 3px;
   margin: 0px;
   width: 250px;
   border: 1px solid #888;
}
input.SmallInput,
input.InputBox {
   font-size: 15px;
   padding: 6px 3px;
}
input.SmallInput:focus,
input.InputBox:focus,
textarea:focus {
   background: #ffe;
}
textarea {
   line-height: 128%;
}
select {
   font-family: arial;
   font-size: 14px;
   color: #222;
   margin: 0px;
   padding: 3px;
   }
select.Day,
select.Year {
   margin-left: 4px;
}
.Button {
   cursor: pointer;
   margin: 0px 0px 0px 0px;
   font-family: Tahoma, 'Trebuchet MS', Arial, Verdana;
   padding: 4px;
   font-size: 11px;
   background: url('button_bg2.png') repeat-x center left #f8f8f8;
   color: #555;
   border: 1px solid #bbb;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   }
input.Button {
   font-weight: bold;
}
.Button:hover {
   color: #333;
   border: 1px solid #888;
}
/* End Typography */

/* Begin Layout */
body {
   background: #ffffff /* Body Background Color */;
   margin: 0;
   padding: 0;
   text-align: center;
   font-size: small;
   }
.Hidden {
   display: none;
}
#Head {
   background: #44c7f4 /* Banner Background Color */;
   padding: 0;
   text-align: right;
   height: 50px;
}
#Head h1 {
   display: block;
   font-weight: bold;
   margin: 0;
   padding: 21px 7px 0 0;
   border: 0;
   float: left;
}
#Head h1 a span {
   font-size: 24px;
   color:#E4F7FE;
   text-shadow:0 1px 0 #30ACD6;   
}
#Head h1 a:hover span {
   color:#f3fcff;
}
div.Menu {
   text-align: right;
   width: 960px;
   margin: 0 auto;
}
ul#Menu {
   float: left;
   margin: 0 auto;
   padding: 22px 0 0 10px;
}
#Head form {
   float: right;
   width: 250px;
   background: #fff;
   padding: 0;
   margin: 15px 0 0;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
}
#Head form input.InputBox {
   width: 204px;
   border: 0;
   padding: 4px 2px 4px 0;
   background: #fff;
   margin: 0;
   -moz-border-radius-topleft: 2px;
   -moz-border-radius-bottomleft: 2px;
   -webkit-border-top-left-radius: 2px;
   -webkit-border-bottom-left-radius: 2px;
   color: #969696;
   font-size: 13px;
}
#Head form input.Button {
   border: 0;
   width: 38px;
   height: 26px;
   background: #E9F9FF /* Panel Background Color */;
   color: #2786C2 /* Panel Font Color */;
   padding: 3px 0 4px;
   margin: 0;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   -moz-border-radius-topright: 2px;
   -moz-border-radius-bottomright: 2px;
   -webkit-border-top-right-radius: 2px;
   -webkit-border-bottom-right-radius: 2px;
}
#Body {
   width: 960px;
   text-align: left;
   margin: 15px auto 0 auto;
   }
#Content {
   float: left;
   width: 680px;
}
/* Progress Bars */
.Loading {
   height: 100px;
   padding: 0 20px;
   background: url('progress.gif') center center no-repeat;
}
.Progress {
   padding: 10px 40px 10px 0;
   background: url('progress.gif') center center no-repeat;
}
/* Messages */
div.Messages {
   text-align: center;
   position: fixed;
   top: 0;
   left: 0;
   z-index: 200;
   margin: 0 !important;
   padding: 0 !important;
   list-style: none !important;
   font-size: 12px;
   display: block;
   width: 100%;
}
* html div.Messages {
  position: absolute;
  width: 100%;/*IE5.5*/
  top: 0;
  left: 0;
  overflow: visible; 
  top: expression(eval(document.compatMode && document.compatMode=='CSS1Compat') ? documentElement.scrollTop : document.body.scrollTop);
}
div.Messages ul {
   cursor: pointer;
   width: auto !important;
   border: 0 !important;
   margin: 0 auto !important;
   padding: 4px 8px !important;
   -moz-border-radius-bottomleft: 2px;
   -moz-border-radius-bottomright: 2px;
   -webkit-border-bottom-left-radius: 2px;
   -webkit-border-bottom-right-radius: 2px;
   background: #ff9 !important;
   display:-moz-inline-stack;
   display:inline-block;
   zoom:1;
   *display:inline;
}
div.Messages ul li {
   text-align: left !important;
   border: 0 !important;
   color: #000 !important;
   padding: 0 !important;
   margin: 0 !important;
   list-style-position: outside;
}

div.Errors ul {
   background: #d50a0a !important;
}
div.Errors ul li {
   color: #fff !important;
}

.Warning {
   background: #ff9;
   color: #000;
   padding: 3px 6px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
}

/* Close buttons */
a.Close {
   font-weight: bold;
   font-family: tahoma;
   font-size: 10px;
   text-transform: uppercase;
   color: #bbb;
   background: #f9f9f9;
   -moz-border-radius: 8px;
   -webkit-border-radius: 8px;
   padding: 1px 4px 2px 5px;
   margin: 0;
   line-height: 100%;
   border: 1px solid #ddd;
}
a.Close:hover {
   border: 1px solid #bbb;
   color: #999;
   background: #fff;
}
.Errors a.Close,
.StatusMessage a.Close {
   float: right;
   color: #e4c100;
   background: #ffffa4;
   padding: 2px 4px 3px 5px;
   margin: 2px 0 0;
   display: block;
   border: 1px solid #ffd800;
}
.Errors a.Close {
   background: #e11414;
   border: 1px solid #b00;
   color: #ff6;
}
.Errors a.Close:hover {
   color: #ff0;
   background: #d11;
   border: 1px solid #a00;
}
.StatusMessage a.Close:hover {
   background: #ffffe2;
}

/* Panels */
#Panel {
   width: 250px;
   float: right;
}
/* Panel Boxes */
div.Box {
   -moz-border-radius: 1px;
   -webkit-border-radius: 1px;
   background: #e9f9ff /* Panel Background Color */;
   color: #999;
   padding: 6px 10px;
   margin: 0 0 10px 0;
}
/* ... */

